# arcaea-viewer

./: .gitattributes  .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  master_plan.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  roadmap-apply-request.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: apply-comprehensive-issue-upgrade-once.yml  apply-roadmap-once.yml  bootstrap-roadmap.yml  build-and-push.yaml  ci.yml  (+1 more)
crates/renderer/: Cargo.toml
crates/renderer/examples/: chart_preview.rs
crates/renderer/src/: lib.rs
crates/wasm/: Cargo.toml
crates/wasm/src/: lib.rs
docs/: CHART_VISUAL_MODEL.md  WASM_CONTRACT.md  first_step_final.md  implement.md  master_plan.md  master_plan_ecosystem_problems.md  phase0_1_foundation_definition.md  phase0_2_execution.md  phase0_4_rendering_architecture.md
fixtures/: arc_taps.aff  arctap_outside_parent.aff  arctap_without_parent.aff  checkpoint9_mixed.aff  duplicate_boundary_arctaps.aff  invalid_arc_coordinate.aff  invalid_hold_interval.aff  invalid_lane.aff  malformed_syntax.aff  malformed_timing_group.aff  minimal.aff  mixed_events.aff  multiple_domain_errors.aff  negative_time.aff  timing_group.aff  unknown_timing_group_property.aff  unsupported_event.aff
roadmap/: README.md  issue-execution-guidance.json  issues.index.json  labels.json  milestones.json
scripts/: apply-comprehensive-issue-upgrade-once.sh  bootstrap-roadmap.sh  patch-milestone-canonical-time-once.sh
tools/: check.mjs
(+59 files in other folders)
