[package]
name = "arcaea-viewer-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
arcaea-viewer-core = { path = "../core" }
arcaea-viewer-parser = { path = "../parser" }
arcaea-viewer-renderer = { path = "../renderer" }
arcaea-viewer-timing = { path = "../timing" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wasm-bindgen = "0.2"
